--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -245,20 +246,20 @@ body.theme-fortnite {
     <div class="top-nav">
         <select id="themeSelect" class="nav-item">
             <option value="default">🎭 Padrão</option>
-            <option value="gow">⚔️ God of War</option>
-            <option value="dbz">💎 DBZ</option>
-            <option value="mk">💎 MK</option>
-            <option value="gta">💎 GTA SA</option>
-            <option value="gtav">💎 GTA V</option>
-            <option value="cod">💎 COD</option>
-            <option value="re">💎 Resident Evil</option>
-			<option value="cyberPunk">💎 CyberPunk</option>
+            <option value="gow">God of War⚔️</option>
+            <option value="dbz">Dragon Ball🐉</option>
+            <option value="mk">💎 MK🥷</option>
+            <option value="gta">💎 GTA SA🚒</option>
+            <option value="gtav">💎 GTA V🚓</option>
+            <option value="cod">💎 COD🪖</option>
+            <option value="re">💎 Resident Evil👮</option>
+			<option value="cyberPunk">💎 CyberPunk🔫</option>
 
 			
-<option value="mario">🍄 Mario</option>
-<option value="zelda">🗡️ Zelda</option>
-<option value="spiderman">🕷️ Spiderman</option>
-<option value="fortnite">🎮 Fortnite</option>
+<option value="mario">💎 Mario🍄</option>
+<option value="zelda">💎 Zelda🗡️</option>
+<option value="spiderman">💎 Spiderman🕷️</option>
+<option value="fortnite">💎 Fortnite🎮</option>
 
         </select>
         <button class="nav-item" id="sortBtn">🔃 Ordem: Recentes</button>
