--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ body.theme-fortnite {
         <button class="catBtn" data-cat="YouTube">📺 YouTube</button>
         <button class="catBtn" data-cat="Jogos PC">💻 Jogos PC</button>
         <button class="catBtn" data-cat="Fix SteamTools">🛠️ SteamTools</button>
-        <button class="catBtn" data-cat="Arquivos">📁 Arquivos</button>
+        <button class="catBtn" data-cat="Arquivos">🗄️ Arquivos</button>
         <button class="catBtn" data-cat="Roms">📀 Roms</button>
         <button class="catBtn" data-cat="Emuladores">🕹️ Emuladores</button>
         <button class="catBtn" data-cat="Premium" id="catPremiumBtn" style="border: 1px dashed gold; color: gold !important; margin-top: 10px;">💎 Premium 🔒</button>
