--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -392,6 +393,39 @@ body.premium-active .catBtn[data-cat="Premium"] {
         <button id="premiumSubmit" class="nav-item" style="background:gold; color:#000; width:100%; margin-top:10px">Validar</button>
     </div>
 </div>
+<!-- 💎 MODAL BOAS-VINDAS PREMIUM -->
+<div id="premiumWelcomeModal" class="modal-overlay">
+    <div class="modal-box" style="border:2px solid gold; background:linear-gradient(145deg,#111,#1a1a1a);">
+
+        <h2 style="color:gold; font-size:28px; margin-bottom:15px;">
+            💎 Bem-vindo ao Premium
+        </h2>
+
+        <p style="opacity:0.9; margin-bottom:20px;">
+            Você desbloqueou todos os conteúdos exclusivos
+        </p>
+
+        <div style="text-align:left; margin-bottom:25px; line-height:1.8; font-size:14px;">
+            ✔ Temas exclusivos<br>
+            ✔ Jogos Premium<br>
+            ✔ Conteúdo antecipado
+        </div>
+
+        <button id="premiumWelcomeBtn"
+            style="background:linear-gradient(135deg,#ffd700,#ff8c00);
+                   border:none;
+                   color:#000;
+                   padding:12px 20px;
+                   border-radius:50px;
+                   font-weight:700;
+                   cursor:pointer;
+                   width:100%;">
+            🚀 Explorar Agora
+        </button>
+
+    </div>
+</div>
+
 
 <div id="toast-container"></div><script>
 (function(){
@@ -736,6 +770,16 @@ document.getElementById('loginInput').addEventListener('keydown', function(e) {
                 isPremium = true;
                 document.getElementById('premiumModal').style.display = 'none';
                 render(); showToast("💎 PREMIUM ATIVADO COM SUCESSO!");
+				// ✅ Mostra modal de boas-vindas (uma vez por token)
+const tokenAtivador = localStorage.getItem('toolflix_token_ativador') || '';
+const welcomeKey = 'toolflix_welcome_seen_' + tokenAtivador;
+
+if (!localStorage.getItem(welcomeKey)) {
+    const wm = document.getElementById('premiumWelcomeModal');
+    if (wm) wm.style.display = 'flex';
+    localStorage.setItem(welcomeKey, '1');
+}
+
             } else { showToast("Token Inválido!"); }
         } catch (e) { showToast("Erro ao validar token."); }
     };
@@ -822,6 +866,15 @@ document.querySelectorAll('.catBtn').forEach(b => {
     document.getElementById('adminBtn').onclick = () => { document.getElementById('loginModal').style.display='flex'; document.getElementById('loginInput').focus(); };
     document.getElementById('premiumTriggerBtn').onclick = () => { document.getElementById('premiumModal').style.display='flex'; document.getElementById('premiumInput').focus(); };
     document.getElementById('searchBar').oninput = render;
+	// ✅ Botão do modal de boas-vindas
+const premiumWelcomeBtn = document.getElementById('premiumWelcomeBtn');
+if (premiumWelcomeBtn) {
+    premiumWelcomeBtn.onclick = () => {
+        const wm = document.getElementById('premiumWelcomeModal');
+        if (wm) wm.style.display = 'none';
+    };
+}
+
 
     checkPremiumSync();
     syncJogos();
