--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@ body.premium-active .sidebar {
   0% { opacity:0; transform: scale(0.98); }
   40%{ opacity:1; transform: scale(1); }
   100%{ opacity:0; transform: scale(1.02); }
+  }
+
 
 
 
@@ -514,6 +516,8 @@ body.premium-active .sidebar {
 let isPremium = false;
 let modoAdmin = false;
 let catAtiva = 'Todos';
+let premiumMembersCount = 0;
+
 let sortModo = 'recentes';
 let filterFav = false;
 let editandoIndex = -1;
@@ -522,12 +526,13 @@ let editandoIndex = -1;
     // --- SEGURANÇA E VALIDAÇÃO ---
 async function checkPremiumSync() {
     const tokenAtivador = localStorage.getItem('toolflix_token_ativador');
+	
+
 
     if (!tokenAtivador) {
-        isPremium = false;
-        render();
-        return;
-    }
+    isPremium = false;
+}
+
 
     try {
         const resp = await fetch(URL_TOKENS + '?v=' + Date.now());
@@ -536,6 +541,14 @@ async function checkPremiumSync() {
         const data = await resp.json();
         const ativos = data.ativos || [];
         const usados = data.usados || [];
+		premiumMembersCount = usados.length;
+localStorage.setItem('toolflix_premium_members', String(premiumMembersCount));
+if (!tokenAtivador) {
+    render();
+    return;
+}
+
+
 
         if (!ativos.includes(tokenAtivador) || usados.includes(tokenAtivador)) {
             localStorage.removeItem('toolflix_premium_atv');
@@ -550,6 +563,8 @@ async function checkPremiumSync() {
     } catch (e) {
         // fallback se GitHub falhar
         isPremium = localStorage.getItem('toolflix_premium_atv') === 'true';
+		premiumMembersCount = parseInt(localStorage.getItem('toolflix_premium_members') || '0', 10);
+
         render();
     }
 
@@ -600,12 +615,20 @@ function updatePremiumSidebar() {
   const s = getPremiumStats();
 
   if (badge) badge.style.display = isPremium ? 'block' : 'none';
+  const headline = isPremium
+  ? `💎 Você é um dos <b>${premiumMembersCount}</b> membros Premium`
+  : `🔥 <b>${premiumMembersCount}</b> membros Premium já desbloquearam`;
+  
+
+
 
   counter.innerHTML = `
-    <div style="font-weight:900; color:gold; margin-bottom:6px;">📊 Status Premium</div>
+    <div style="font-weight:900; color:gold; margin-bottom:6px;">${headline}</div>
     <div>🔓 Desbloqueados: <b>${s.desbloqueados}</b> / <b>${s.totalPremium}</b></div>
     <div>📦 Total no catálogo: <b>${s.totalItens}</b></div>
-  `;
+`;
+
+
 }
 
 function lockFeedback(el) {
