--- a/index.html
+++ b/index.html
@@ -616,8 +616,9 @@ function updatePremiumSidebar() {
 
   if (badge) badge.style.display = isPremium ? 'block' : 'none';
   const headline = isPremium
-  ? `💎 Você é um dos <b>${premiumMembersCount}</b> membros Premium`
-  : `🔥 <b>${premiumMembersCount}</b> membros Premium já desbloquearam`;
+  ? `💎 Você é um dos <b>${premiumMembersCount}</b> usuários Premium`
+  : `💎 <b>${premiumMembersCount}</b> usuários Premium ativos`;
+
   
 
 
