--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
         .top-nav { display: flex; justify-content: flex-end; align-items: center; gap: 15px; margin-bottom: 40px; flex-wrap: wrap; }
         .nav-item { background: rgba(255,255,255,0.05); border: 1px solid var(--glass-border); color: #fff; padding: 12px 20px; border-radius: 50px; cursor: pointer; font-weight: 600; transition: 0.3s; font-size: 13px; outline: none; }
         .nav-item:hover { background: rgba(255,255,255,0.15); transform: translateY(-2px); }
+		/* ===== Área do Usuário (Game UI) ===== */
+#userArea {
+    background: linear-gradient(145deg, #111, #1a1a1a) !important;
+    border: 1px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.6);
+    border-radius: 50px;
+}
+
+#userArea #xpText {
+    color: #fff;
+    font-weight: 600;
+}
+
+#userArea .xpBar {
+    background: #000;
+}
 
         #themeSelect { background: #111; color: gold; border: 1px solid gold; padding: 10px 18px; border-radius: 14px; font-weight: bold; cursor: pointer; }
 
