--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -348,7 +349,33 @@
   z-index: 1;
 }
 
-    </style>
+    /* ===== LEVEL UP FX ===== */
+@keyframes levelPop {
+  0% { transform: translateY(0) scale(1); box-shadow: 0 0 0 rgba(255,215,0,0); }
+  35% { transform: translateY(-2px) scale(1.06); box-shadow: 0 0 24px rgba(255,215,0,0.35); }
+  100% { transform: translateY(0) scale(1); box-shadow: 0 0 0 rgba(255,215,0,0); }
+}
+@keyframes levelRing {
+  0% { opacity: 0; transform: scale(0.9); }
+  20% { opacity: 1; }
+  100% { opacity: 0; transform: scale(1.25); }
+}
+
+#userArea.level-up-pop {
+  animation: levelPop 0.75s ease;
+  border-color: rgba(255,215,0,0.55) !important;
+}
+
+#userArea.level-up-pop::after{
+  content:"";
+  position:absolute;
+  inset:-6px;
+  border-radius: 999px;
+  border: 2px solid rgba(255,215,0,0.25);
+  animation: levelRing 0.75s ease;
+  pointer-events:none;
+}
+	</style>
 </head>
 <body class="theme-default">
 <aside class="sidebar">
@@ -1122,6 +1149,7 @@ function achUnlockCheck(){
       unlock[a.id] = true;
       changed = true;
       showToast(`🏆 Conquista desbloqueada: ${a.title}`);
+	  playTrophySound();
     }
   }
 
@@ -1131,6 +1159,7 @@ function achUnlockCheck(){
     unlock['platinum_toolflix'] = true;
     changed = true;
     showToast('🏆 PLATINA TOOLFLIX desbloqueada!');
+	playTrophySound();
   }
 
   if(changed) achSaveUnlock(unlock);
@@ -1875,6 +1904,67 @@ exitAdmin = function(){
   _exitAdminOld();
   clearAdminPassword();
 };
+/* ===== SONS (PS-style simples) ===== */
+function playTone(freq, dur=0.08, vol=0.12, type='sine'){
+  try{
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const osc = ctx.createOscillator();
+    const gain = ctx.createGain();
+    osc.type = type;
+    osc.frequency.value = freq;
+    gain.gain.value = vol;
+    osc.connect(gain);
+    gain.connect(ctx.destination);
+    osc.start();
+    osc.stop(ctx.currentTime + dur);
+    osc.onended = () => ctx.close && ctx.close();
+  }catch(e){}
+}
+
+function playTrophySound(){
+  // “bling” tipo troféu (3 notas rápidas)
+  playTone(784, 0.06, 0.10, 'triangle');   // G5
+  setTimeout(()=> playTone(988, 0.07, 0.10, 'triangle'), 70);   // B5
+  setTimeout(()=> playTone(1175,0.09, 0.12, 'triangle'), 150);  // D6
+}
+
+function playLevelUpSound(){
+  // “subida” (4 notas)
+  playTone(523, 0.07, 0.10, 'sine'); // C5
+  setTimeout(()=> playTone(659, 0.07, 0.10, 'sine'), 70); // E5
+  setTimeout(()=> playTone(784, 0.08, 0.11, 'sine'), 140);// G5
+  setTimeout(()=> playTone(1046,0.10, 0.12, 'sine'), 220);// C6
+}
+
+function triggerLevelUpFx(newLevel){
+  const el = document.getElementById('userArea');
+  if(!el) return;
+  el.classList.remove('level-up-pop');
+  // reflow
+  void el.offsetWidth;
+  el.classList.add('level-up-pop');
+  setTimeout(()=> el.classList.remove('level-up-pop'), 850);
+
+  playLevelUpSound();
+  showToast(`🎉 UP! Você subiu para o nível ${newLevel}!`);
+}
+/* ===== DETECTA LEVEL UP (sem mexer no seu awardXp antigo) ===== */
+(function patchLevelUp(){
+  const _awardXpPrev = awardXp; // pega a versão atual (já com conquistas)
+  awardXp = function(amount, reason){
+    const beforeXp = Number(loadUser()?.xp || 0);
+    const beforeLv = getLevelInfo(beforeXp).level;
+
+    _awardXpPrev(amount, reason);
+
+    const afterXp = Number(loadUser()?.xp || 0);
+    const afterLv = getLevelInfo(afterXp).level;
+
+    if(afterLv > beforeLv){
+      triggerLevelUpFx(afterLv);
+    }
+  };
+})();
 })();
 
 })();
